services/newsfeed/newsfeed-gateway.yaml
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /newsfeed.*
        backend:
          serviceName: newsfeed
          servicePort: 80
---
